--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.canvas-wrapper {
+    display: block;
+    width: 0;
+    height: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: -1;
+}
+.canvas-wrapper canvas {
+    transform: translate(-50%, -50%)
+}
